--- a/src/main/resources/templates/admin/adminBoardList.html
+++ b/src/main/resources/templates/admin/adminBoardList.html
@@ -17,17 +17,16 @@
                 <h2>게시판 관리</h2>
                 <div class="right-con">
                     <div class="con-box">
-                        <table border="1">
+                        <table>
                             <thead>
                                 <tr>
                                     <th>번호</th>
-                                    <th>제목</th>
-                                    <th>내용</th>
-                                    <th>조회수</th>
-                                    <th>등록일</th>
-                                    <th>수정일</th>
-                                    <th>댓글수</th>
+                                    <th style="width: 30%;">제목</th>
                                     <th>작성자</th>
+                                    <th>조회수</th>
+                                    <th>댓글수</th>
+                                    <th style="width: 15%;">등록일</th>
+                                    <th style="width: 15%;">수정일</th>
                                     <th>상세</th>
                                 </tr>
                             </thead>
@@ -35,12 +34,11 @@
                                 <tr th:each="board : ${boardList}">
                                     <td th:text="${board.boardId}"></td>
                                     <td th:text="${board.boardTitle}"></td>
-                                    <td th:text="${board.boardContent}"></td>
+                                    <td th:text="${board.mName}"></td>
                                     <td th:text="${board.boardHit}"></td>
+                                    <td th:text="${board.boardCmcount}"></td>
                                     <td th:text="${#temporals.format(board.boardCreate, 'yyyy-MM-dd HH:mm:ss')}"></td>
                                     <td th:text="${#temporals.format(board.boardUpdate, 'yyyy-MM-dd HH:mm:ss')}"></td>
-                                    <td th:text="${board.boardCmcount}"></td>
-                                    <td th:text="${board.mName}"></td>
                                     <td><a th:href="@{|/board/boardDetail/${board.boardId}|}">보기</a></td>
                                 </tr>
     
