--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -13,16 +13,18 @@
                 <div class="weather">
                     <div class="title">
                         <span class="nowtime"></span>
-                        <span>현재날씨(Seoul)</span>
+                        <span>Seoul</span>
                     </div>
                     <div class="desc">
                         <h3 class="SeoulIcon"></h3>
-                        <h3 class="SeoulWeatherDesc"></h3>
+                        <div class="today">
+                            <h3 class="SeoulWeatherDesc"></h3>
+                            <h2 class="SeoulNowtemp"> </h2>
+                        </div>
                     </div>
                     <div class="temp">
-                        <h4 class="SeoulNowtemp" style="font-weight: bold;">현재기온 : </h4>
-                        <h4 class="SeoulLowtemp">최저기온 : </h4>
-                        <h4 class="SeoulHightemp">최고기온 : </h4>
+                        <h4 class="SeoulHightemp">최고 </h4>
+                        <h4 class="SeoulLowtemp">/ 최저 </h4>
                     </div>
                 </div>
                 <div class="menu">
