--- a/src/main/resources/templates/notice/noticeUpdate.html
+++ b/src/main/resources/templates/notice/noticeUpdate.html
@@ -28,7 +28,7 @@
                               style="overflow-y: auto; font-size: large; font-weight: 300;"></textarea>
                   <li class="s3">
                     <input type="submit" value="공지사항수정" class="s3sub">
-                    <a th:href="@{|/notice/noticeDeatail/${notice.noticeId}|}" class="s3sub">취소</a>
+                    <a th:href="@{|/notice/noticeDetail/${notice.noticeId}|}" class="s3sub">취소</a>
                     <a th:href="@{/notice/noticePage}" class="s3sub">목록</a>
                   </li>
                 </ul>
