댓글 Delelte 및 카운트 부분 코드 수정

--- a/src/main/resources/templates/board/boardPage.html
+++ b/src/main/resources/templates/board/boardPage.html
@@ -50,9 +50,10 @@
                                 <td th:text="${board.boardHit}"></td>
                                 <td th:text="${#temporals.format(board.boardCreate, 'yyyy년MM월dd일')}"></td>
                                 <td th:text="${#temporals.format(board.boardUpdate, 'yyyy년MM월dd일')}"></td>
+<!--                                <td th:text="${board.boardCmcount}"></td>-->
                                 <td th:text="${board.boardCmcount}"></td>
                                 <td th:text="${board.mName}"></td>
-                                <td><a th:href="@{|/board/boardDetail/${board.boardId}|}">보기</a></td>
+                                <td><a th:href="@{|/board/boardDetail/${board.boardId}/0|}">보기</a></td>
                             </tr>
 
                         </tbody>
