--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -28,13 +28,15 @@
                         <li class="s2">
                             <label th:for="noticeContent">내용</label>
                         </li>
-                        <textarea th:text="${notice.noticeContent}" cols="100" rows="30" style="overflow-y: auto; font-size: large; font-weight: 300;"  readonly></textarea>
+                        <textarea th:text="${notice.noticeContent}" cols="100" rows="30" style=
+                                "overflow-y: auto; font-size: large; font-weight: 300; "  readonly></textarea>
 
                         <li class="s3" th:if="${notice.mEmail.equals(#authentication.getName())}">
                             <a th:href="@{|/notice/noticeUpdate/${notice.noticeId}|}" class="s3sub">공지사항수정</a>
                             <a th:href="@{|/notice/noticeDelete/${notice.noticeId}|}" class="s3sub">공지사항삭제</a>
+                            <a th:href="@{/notice/noticePage}" class="s3sub">공지사항조회</a>
                         </li>
-                        <li class="s3">
+                        <li class="s3" th:unless="${notice.mEmail.equals(#authentication.getName())}">
                             <a th:href="@{/notice/noticePage}" class="s3sub">공지사항조회</a>
                         </li>
                     </ul>
