--- a/src/main/resources/templates/board/BoardDetail.html
+++ b/src/main/resources/templates/board/BoardDetail.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" , xmlns:sec="http://www.thymeleaf.org/extras/spring-security5">
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
 
 <head>
     <meta charset="UTF-8">
@@ -45,8 +44,9 @@
                         <li class="s3" th:if="${board.mEmail.equals(#authentication.getName())}">
                             <a th:href="@{|/board/boardUpdate/${board.boardId}|}" class="s3sub">게시글수정</a>
                             <a th:href="@{|/board/boardDelete/${board.boardId}|}" class="s3sub">게시글삭제</a>
+                            <a th:href="@{/board/boardList}" class="s3sub">게시글조회</a>
                         </li>
-                        <li class="s3">
+                        <li class="s3" th:unless="${board.mEmail.equals(#authentication.getName())}">
                             <a th:href="@{/board/boardList}" class="s3sub">게시글조회</a>
                         </li>
                     </ul>
