게시글 상세 수정

--- a/src/main/resources/templates/admin/adminBoardList.html
+++ b/src/main/resources/templates/admin/adminBoardList.html
@@ -39,7 +39,7 @@
                                     <td th:text="${board.boardCmcount}"></td>
                                     <td th:text="${#temporals.format(board.boardCreate, 'yyyy-MM-dd HH:mm:ss')}"></td>
                                     <td th:text="${#temporals.format(board.boardUpdate, 'yyyy-MM-dd HH:mm:ss')}"></td>
-                                    <td><a th:href="@{|/board/boardDetail/${board.boardId}|}">보기</a></td>
+                                    <td><a th:href="@{|/board/boardDetail/${board.boardId}/0|}">보기</a></td>
                                 </tr>
     
                             </tbody>
