결재문서 수정시 오류 수정

--- a/src/main/resources/templates/approval/listUpdate.html
+++ b/src/main/resources/templates/approval/listUpdate.html
@@ -41,7 +41,7 @@
 
                                 <li class="approver">
                                     <label th:for="approverEmail">결재자 입력(이메일)</label>
-                                    <input type="email" th:value="${approval.approverEmail}" placeholder="이메일을 입력하세요.">
+                                    <input type="email" name="approverEmail" th:value="${approval.approverEmail}" placeholder="이메일을 입력하세요.">
                                 </li>
 
                                 <li class="file">
