--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -23,8 +23,9 @@
                         </div>
                     </div>
                     <div class="temp">
-                        <h4 class="SeoulHightemp">최고 </h4>
-                        <h4 class="SeoulLowtemp">/ 최저 </h4>
+                        <h4 class="SeoulHightemp"></h4>
+                        <h4>/ </h4>
+                        <h4 class="SeoulLowtemp"></h4>
                     </div>
                 </div>
                 <div class="menu">
