--- a/src/main/resources/static/css/account/accountList.css
+++ b/src/main/resources/static/css/account/accountList.css
@@ -32,7 +32,7 @@
 .right-menu .container h2{
     background-color: #000000;
     color: #ffffff;
-    padding: 5px;
+    padding: 5px 5px 5px 15px;
 }
 
 .right-menu .right-con{
@@ -59,6 +59,7 @@
     width: 50px;
     text-align: center;
     box-sizing: border-box;
+    border-radius: 2px;
 }
 
 /* 리스트 영역 */
@@ -81,11 +82,16 @@
 } */
 
 th, td{
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding: 5px 0px 5px 7px;
     box-sizing: border-box;
-    border-bottom: 1px solid #878784;
+    border-bottom: 1px solid #dfdfdf;
     border-top: 1px solid #878784;
+}
+
+.title:hover{
+    text-decoration-line: underline;
+    text-decoration-thickness: 1%;
+    text-underline-offset: 5px;
 }
 
 /* 페이징 영역 */
@@ -98,5 +104,10 @@ th, td{
     display: flex;
     justify-content: center;
     gap: 10px;
+}
+
+.tr1 {
+    background-color: #444444;
+    color: white;
 }
 
