--- a/src/main/resources/templates/account/accountDetail.html
+++ b/src/main/resources/templates/account/accountDetail.html
@@ -50,8 +50,8 @@
                             </li>
 
                             <li>
-                                <h4>이월금</h4>
-                                <input type="text" th:field="*{acSurplus}" placeholder="이월금" readonly>원
+                                <h4>잔여금</h4>
+                                <input type="text" th:field="*{acSurplus}" placeholder="잔여금" readonly>
                             </li>
                         </div><!-- title-zone 끝 -->
 
