회계관리 수저ㅏㅇ

--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -81,14 +81,10 @@
                             </ul>
                         </li>
                         <li>
-                            <a th:href="@{/account/list}">회계관리</a>
+                            <a href="#">회계관리</a>
                             <ul class="sub">
                                 <li>
-                                    <a th:href="@{/account/list}">게시글</a>
-                                </li>
-
-                                <li>
-                                    <a href="#">잔여금</a>
+                                    <a th:href="@{/account/list}">수입/지출 내역</a>
                                 </li>
                             </ul>
                         </li>
