회계관리 수정

--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -84,7 +84,7 @@
                             <a href="#">회계관리</a>
                             <ul class="sub">
                                 <li>
-                                    <a th:href="@{/account/list}">수입/지출 내역</a>
+                                    <a th:href="@{/account/list}">수입지출 내역</a>
                                 </li>
                             </ul>
                         </li>
