--- a/src/main/resources/static/css/account/accountDetail.css
+++ b/src/main/resources/static/css/account/accountDetail.css
@@ -187,6 +187,8 @@ table tr:nth-child(2){
 
 #wrap .right-menu .container .right-con .account-list .income-expend-sum li:nth-child(1){
     flex: 6;
+    padding-left: 120px;
+    box-sizing: border-box;
 }
 
 #wrap .right-menu .container .right-con .account-list .income-expend-sum li:nth-child(1) input{
@@ -205,7 +207,7 @@ table tr:nth-child(2){
 #wrap .right-menu .container .right-con .account-list .sum{
     display: flex;
     justify-content: left;
-    padding: 20px 0;
+    padding: 20px 0 20px 120px;
     box-sizing: border-box;
     width: 80%;
 }
