--- a/src/main/resources/templates/calendar/teamSchedule/teamCalendar.html
+++ b/src/main/resources/templates/calendar/teamSchedule/teamCalendar.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>개인일정</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-  <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.4/index.global.min.js'></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+   <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.4/index.global.min.js'></script>
+  
   <!-- bootstrap 4 , 직접 할 경우 생략-->
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <link rel="stylesheet" th:href="@{/css/calendar/teamSchedule/teamCalendar.css}">
+
+ 
 
   <script>
     //브라우저가 HTML을 전부 읽고 DOM 트리를 완성하는 즉시 발생
@@ -48,7 +51,10 @@
           AddEventButton: {
             // 오른쪽 텍스트
             text: "일정 추가",
-            click: function () {
+            click: function (e) {
+              
+              console.log(e.target)
+
               $("#calendarModal").modal('show');
               $("#addCalendar").on("click", function () {
 
