--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -4,8 +4,11 @@
 
 
 <div class="left-menu" th:fragment="leftMenuFragment">
-        <!-- 날씨 -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
+    <!-- 날씨 -->
+    <th:block th:if="${key} == null">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js" defer></script>
+    </th:block>
         <script th:src="@{/js/weather.js}" defer></script>
         <div class="left-con">
             <div class="dash-board">
@@ -52,6 +55,9 @@
                                 </li>
                                 <li>
                                     <a th:href="@{/memberSchedule/memberSchedule}">개인일정 관리</a>
+                                </li>
+                                <li sec:authorize="hasRole('ADMIN')">
+                                    <a th:href="@{/teamSchedule/teamSchedule}">공식일정 관리</a>
                                 </li>
                             </ul>
                         </li>
@@ -132,9 +138,6 @@
                             <ul class="sub">
                                 <li>
                                     <a th:href="@{/member/memberList}">회원 관리</a>
-                                </li>
-                                <li>
-                                    <a th:href="@{/teamSchedule/teamSchedule}">공식일정 관리</a>
                                 </li>
                                 <li>
                                     <a th:href="@{/board/adminNoticeList}">공지사항 관리</a>
