--- a/src/main/resources/templates/calendar/attend/myAttendPaging.html
+++ b/src/main/resources/templates/calendar/attend/myAttendPaging.html
@@ -48,7 +48,7 @@
                         <input type="text" id="attendId" name="attendId" th:value="${attendDto.attendId}" hidden="hidden">
                     <td th:text="${attendDto.email}"></td>
                     <td th:text="${#temporals.format(attendDto.attendStart, 'yyyy-MM-dd HH:mm:ss')}"></td>
-                    <td th:if="${attendDto.attendEnd}==null">퇴근을 찍지 않았습니다</td>
+                    <td th:if="${attendDto.attendEnd}==null"  style="color:red">퇴근을 찍지 않았습니다</td>
                     <td th:unless="${attendDto.attendEnd}==null" th:text="${#temporals.format(attendDto.attendEnd, 'yyyy-MM-dd HH:mm:ss')}"></td>
                     <!--             <td th:text="${member.password}"></td>-->
                         <td sec:authorize="hasRole('ADMIN')"><input type="submit" value="자세히 보기"></td>
@@ -61,34 +61,39 @@
             <div class="paging">
                 <ul>
                     <li>
-                        <span th:if="${1 == attendDtoPage.pageable.pageNumber+1}"  style="color:#a2e413">START</span>
+                        <span th:if="${1 == attendDtoPage.pageable.pageNumber+1}"  style="color:darkgrey   ">START</span>
                         <a th:unless="${1 == attendDtoPage.pageable.pageNumber+1}"
-                           style="color:#e61d8b" th:href="@{/attend/myAttendancePaging(page=0)}">처음</a>
+                           style="color:black" th:href="@{/attend/myAttendancePaging(page=0)}">처음</a>
+                        &nbsp
                     </li>
 
                     <li>
-                        <span th:if="${1 == attendDtoPage.pageable.pageNumber+1}"  style="color:#a2e413">이전</span>
-                        <a th:unless="${1 == attendDtoPage.pageable.pageNumber+1}"   style="color:#e61d8b"
+                        <span th:if="${1 == attendDtoPage.pageable.pageNumber+1}"  style="color:darkgrey   ">이전</span>
+                        <a th:unless="${1 == attendDtoPage.pageable.pageNumber+1}"   style="color:black"
                            th:href="@{/attend/myAttendancePaging(page=${ attendDtoPage.pageable.pageNumber - 1})}">이전</a>
+                        &nbsp
                     </li>
 
 
                     <!-- 페이지 번호 -->
                     <li th:each="i: ${#numbers.sequence(startPage, endPage)}">
-                        <span th:if="${i == attendDtoPage.pageable.pageNumber+1}"  style="color:#a2e413" th:text="${i}"></span>
-                        <a th:unless="${i == attendDtoPage.pageable.pageNumber+1}" style="color:#e61d8b"
+                        <span th:if="${i == attendDtoPage.pageable.pageNumber+1}"  style="color:red" th:text="${i}"></span>
+                        <a th:unless="${i == attendDtoPage.pageable.pageNumber+1}" style="color:black"
                            th:href="@{/attend/myAttendancePaging(page=${ i - 1})}" th:text="${i}"></a>
+                        &nbsp
                     </li>
                     <li>
-                        <span th:if="${attendDtoPage.totalPages == attendDtoPage.pageable.pageNumber+1}"  style="color:#a2e413">다음</span>
-                        <a th:unless="${attendDtoPage.totalPages == attendDtoPage.pageable.pageNumber+1}"  style="color:#e61d8b"
+                        <span th:if="${attendDtoPage.totalPages == attendDtoPage.pageable.pageNumber+1}"  style="color:darkgrey   ">다음</span>
+                        <a th:unless="${attendDtoPage.totalPages == attendDtoPage.pageable.pageNumber+1}" style="color:black"
                            th:href="@{/attend/myAttendancePaging(page=${ attendDtoPage.pageable.pageNumber + 1})}">다음</a>
+                        &nbsp
                     </li>
 
                     <li>
-                        <span th:if="${attendDtoPage.totalPages == attendDtoPage.pageable.pageNumber+1}"  style="color:#a2e413">END</span>
+                        <span th:if="${attendDtoPage.totalPages == attendDtoPage.pageable.pageNumber+1}"  style="color:darkgrey   ">END</span>
                         <a th:unless="${attendDtoPage.totalPages == attendDtoPage.pageable.pageNumber+1}"
-                           style="color:#e61d8b" th:href="@{/attend/myAttendancePaging(page=${attendDtoPage.totalPages-1})}">END</a>
+                           style="color:black" th:href="@{/attend/myAttendancePaging(page=${attendDtoPage.totalPages-1})}">END</a>
+                        &nbsp
                     </li>
                 </ul>
             </div>
